--- a/Layouts/Menu.xml
+++ b/Layouts/Menu.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Menu</name>
     <sid>584025494602815</sid>
-    <event-sheet>MenuEventSheet</event-sheet>
+    <event-sheet>Menu</event-sheet>
     <size>
         <width>1708</width>
         <height>960</height>
