--- a/Layouts/Level 1.xml
+++ b/Layouts/Level 1.xml
@@ -269,6 +269,8 @@
                         <wrapping>Word</wrapping>
                         <line-height>0</line-height>
                     </properties>
+					<behavior-instances>
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
