--- a/Layouts/Level 3.xml
+++ b/Layouts/Level 3.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level 3</name>
     <sid>986283265431515</sid>
-    <event-sheet>Level 3 events</event-sheet>
+    <event-sheet>TestLevel events</event-sheet>
     <size>
         <width>1708</width>
         <height>960</height>
