--- a/Layouts/Test Level.xml
+++ b/Layouts/Test Level.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Test Level</name>
     <sid>502808946108097</sid>
-    <event-sheet>BasicControls</event-sheet>
+    <event-sheet>TestLevel events</event-sheet>
     <size>
         <width>1280</width>
         <height>1024</height>
